--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
         </activity>
-        <activity android:name=".admin.AdminMainActivity"
+        <activity
+            android:name=".admin.AdminMainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity android:name=".admin.set.AdminLibraryEditorActivity"
                   android:launchMode="singleTop"
                   android:screenOrientation="portrait"
                   android:windowSoftInputMode="adjustPan">
